--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,7 @@
   },
   "plugins": ["@typescript-eslint", "prettier"],
   "rules": {
-    "prettier/prettier": "error",
+    "prettier/prettier": "warn",
     "no-case-declarations": "off",
     "no-constant-condition": "off",
     "@typescript-eslint/ban-ts-comment": "off",
