--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,9 +1,10 @@
 {
-  "printWidth": 100,
-  "tabWidth": 2,
-  "useTabs": true,
-  "singleQuote": true,
-  "semi": true,
-  "trailingComma": "none",
-  "bracketSpacing": true
- }
+	"printWidth": 100,
+	"tabWidth": 2,
+	"useTabs": true,
+	"singleQuote": true,
+	"semi": true,
+	"trailingComma": "none",
+	"bracketSpacing": true,
+	"endOfLine": "auto"
+}
