--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"lint": "eslint --ext .ts,.jsx,.tsx --fix --quiet ./packages",
-		"build:dev": "rimraf dist && rollup --bundleConfigAsCjs --config scripts/rollup/react.config.js"
+		"build:dev": "rimraf dist && rollup --bundleConfigAsCjs --config scripts/rollup/dev.config.js"
 	},
 	"keywords": [],
 	"author": "",
@@ -13,6 +13,7 @@
 	"devDependencies": {
 		"@commitlint/cli": "^17.7.1",
 		"@commitlint/config-conventional": "^17.7.0",
+		"@rollup/plugin-alias": "^5.0.0",
 		"@rollup/plugin-commonjs": "^25.0.7",
 		"@rollup/rollup-darwin-arm64": "4.0.2",
 		"@typescript-eslint/eslint-plugin": "^6.9.1",
@@ -25,7 +26,7 @@
 		"husky": "^8.0.3",
 		"prettier": "^3.0.3",
 		"rimraf": "^5.0.5",
-		"rollup": "4.0.2",
+		"rollup": "3.1.0",
 		"rollup-plugin-generate-package-json": "^3.2.0",
 		"rollup-plugin-typescript2": "^0.36.0",
 		"typescript": "^5.2.2"
