--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "index.js",
 	"scripts": {
 		"lint": "eslint --ext .ts,.jsx,.tsx --fix --quiet ./packages",
-		"build:dev": "rimraf dist && rollup --bundleConfigAsCjs --config scripts/rollup/dev.config.js"
+		"build:dev": "rimraf dist && rollup --bundleConfigAsCjs --config scripts/rollup/dev.config.js",
+		"demo": "vite serve demos/test-fc --config scripts/vite/vite.config.js --force"
 	},
 	"keywords": [],
 	"author": "",
@@ -16,8 +17,11 @@
 		"@rollup/plugin-alias": "^5.0.0",
 		"@rollup/plugin-commonjs": "^25.0.7",
 		"@rollup/rollup-darwin-arm64": "4.0.2",
+		"@types/react": "^18.2.39",
+		"@types/react-dom": "^18.2.16",
 		"@typescript-eslint/eslint-plugin": "^6.9.1",
 		"@typescript-eslint/parser": "^6.9.1",
+		"@vitejs/plugin-react": "^4.1.0",
 		"commitlint": "^17.7.1",
 		"eslint": "^8.52.0",
 		"eslint-config-prettier": "^9.0.0",
@@ -29,7 +33,8 @@
 		"rollup": "4.0.2",
 		"rollup-plugin-generate-package-json": "^3.2.0",
 		"rollup-plugin-typescript2": "^0.36.0",
-		"typescript": "^5.2.2"
+		"typescript": "^5.2.2",
+		"vite": "^5.0.4"
 	},
 	"dependencies": {
 		"@rollup/plugin-replace": "^5.0.4"
