--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
 	"scripts": {
 		"lint": "eslint --ext .ts,.jsx,.tsx --fix --quiet ./packages",
 		"build:dev": "rimraf dist && rollup --bundleConfigAsCjs --config scripts/rollup/dev.config.js",
-		"demo": "vite serve demos/test-fc --config scripts/vite/vite.config.js --force"
+		"demo": "vite serve demos/test-fc --config scripts/vite/vite.config.js --force",
+		"test": "jest --config scripts/jest/jest.config.js"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@babel/core": "^7.23.5",
+		"@babel/plugin-transform-react-jsx": "^7.23.4",
+		"@babel/preset-env": "^7.23.5",
 		"@commitlint/cli": "^17.7.1",
 		"@commitlint/config-conventional": "^17.7.0",
 		"@rollup/plugin-alias": "^5.0.0",
@@ -28,6 +32,9 @@
 		"eslint-plugin-prettier": "^5.0.1",
 		"eslint-plugin-react": "^7.33.2",
 		"husky": "^8.0.3",
+		"jest": "^29.7.0",
+		"jest-config": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0",
 		"prettier": "^3.0.3",
 		"rimraf": "^5.0.5",
 		"rollup": "4.0.2",
